[workspace]
members = [
  "mint_lib",
  "hook",
  "hook_resolvers",
]

[workspace.package]
repository = "https://github.com/trumank/mint"
authors = ["trumank", "jieyouxu"]
license = "MIT OR Apache-2.0"
version = "0.2.10"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
patternsleuth = { git = "https://github.com/trumank/patternsleuth" }
steamlocate = "2.0.0-alpha.0"
repak = { git = "https://github.com/trumank/repak" }

[package]
name = "mint"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = ["hook"]
hook = ["dep:hook"]
debug = ["egui/deadlock_detection", "egui/extra_debug_asserts", "egui/extra_asserts"]

[dependencies]
ansi_term = "0.12.1"
anyhow.workspace = true
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive"] }
dialoguer = "0.11.0"
directories = "5.0.1"
eframe = "0.24.0"
egui = "0.24.0"
egui_commonmark = "0.10.0"
egui_dnd = { git = "https://github.com/lucasmerlin/egui_dnd.git" }
futures = "0.3.29"
hex = "0.4.3"
image = { version = "0.24.7", default-features = false, features = ["png"] }
indexmap = { version = "2.1.0", features = ["serde"] }
inventory = "0.3.13"
lazy_static = "1.4.0"
mint_lib = { path = "mint_lib" }
modio = { git = "https://github.com/trumank/modio-rs.git", branch = "dev", default-features = false, features = ["rustls-tls"] }
obake = { version = "1.0.5", features = ["serde"] }
opener = "0.6.1"
path-slash = "0.2.1"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "rustls"] }
reqwest-middleware = "0.2.4"
rfd = "0.12.1"
rust-ini = "0.20.0"
self_update = { version = "0.39.0", default-features = false, features = ["archive-zip", "rustls"] }
semver = "1.0.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
steamlocate.workspace = true
task-local-extensions = "0.1.4"
tempfile = "3.8.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "std", "registry"] }
typetag = "0.2.13"
uasset_utils = { git = "https://github.com/trumank/uasset_utils" }
unreal_asset = { git = "https://github.com/trumank/unrealmodding", branch = "patches" }
url = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["aes-crypto", "deflate", "time"] }
repak = { workspace = true, features = ["oodle", "oodle_loader"] }

[target.'cfg(target_env = "msvc")'.dependencies]
hook = { path = "hook", artifact = "cdylib", optional = true, target = "x86_64-pc-windows-msvc"}
[target.'cfg(not(target_env = "msvc"))'.dependencies]
hook = { path = "hook", artifact = "cdylib", optional = true, target = "x86_64-pc-windows-gnu"}

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
debug = false
strip = true

[profile.dev]
opt-level = 3
lto = "off"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.70.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
unix-archive = ".zip"

[dev-dependencies]
mockall = "0.11.4"
