[workspace]
members = [
  "mint_lib",
  "hook",
  "hook_resolvers",
  "workspace_hack",
]

[workspace.package]
repository = "https://github.com/trumank/mint"
authors = ["trumank", "jieyouxu"]
license = "MIT OR Apache-2.0"
version = "0.2.10"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
patternsleuth = { git = "https://github.com/trumank/patternsleuth" }
steamlocate = "2.0.1"
repak = { git = "https://github.com/trumank/repak" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
itertools = "0.14.0"
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
fs-err = "3.1.0"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "std", "registry"] }
tokio = "1.44.2"
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "rustls", "json"] }
snafu = "0.8.5"

[package]
name = "mint"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = ["hook", "oodle_platform_dependent"]
hook = ["dep:hook"]
oodle = ["repak/oodle_implicit_dynamic"]
oodle_platform_dependent = ["workspace_hack/oodle_platform_dependent"]
debug = ["egui/deadlock_detection"]

[dependencies]
workspace_hack = { path = "workspace_hack" }
ansi_term = "0.12.1"
anyhow.workspace = true
async-trait = "0.1.88"
clap = { version = "4.5.36", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_commonmark = "0.20.0"
futures = "0.3.31"
hex = "0.4.3"
image = { version = "0.25.6", default-features = false, features = ["png"] }
indexmap = { version = "2.9.0", features = ["serde"] }
inventory = "0.3.20"
mint_lib = { path = "mint_lib" }
modio = { git = "https://github.com/trumank/modio-rs.git", branch = "dev", default-features = false, features = ["rustls-tls"] }
obake = { version = "1.0.5", features = ["serde"] }
opener = "0.7.2"
path-slash = "0.2.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest.workspace = true
reqwest-middleware = "0.2.5"
rfd = "0.15.3"
rust-ini = "0.21.1"
self_update = { version = "0.42.0", default-features = false, features = ["archive-zip", "rustls"] }
semver = "1.0.26"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
steamlocate.workspace = true
task-local-extensions = "0.1.4"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
typetag = "0.2.20"
uasset_utils = { git = "https://github.com/trumank/uasset_utils" }
unreal_asset = { git = "https://github.com/trumank/unrealmodding", branch = "patches" }
url = "2.5.4"
zip = { version = "2.6.1", default-features = false, features = ["aes-crypto", "deflate", "time"] }
repak.workspace = true
include_dir = "0.7.4"
postcard.workspace = true
fs-err.workspace = true
snafu.workspace = true
strum = { version = "0.27", features = ["derive"] }
itertools.workspace = true
egui_dnd = "0.12.0"

[target.'cfg(target_env = "msvc")'.dependencies]
hook = { path = "hook", artifact = "cdylib", optional = true, target = "x86_64-pc-windows-msvc"}
[target.'cfg(not(target_env = "msvc"))'.dependencies]
hook = { path = "hook", artifact = "cdylib", optional = true, target = "x86_64-pc-windows-gnu"}

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
debug = false
strip = true

[profile.dev]
opt-level = 3
lto = "off"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.70.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
unix-archive = ".zip"

[dev-dependencies]
mockall = "0.13.1"
