[package]
name = "hook"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
repak.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
fs-err.workspace = true
tracing.workspace = true
patternsleuth = { workspace = true, features = ["process-internal", "image-pe"] }
retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour"] }
hook_resolvers = { path = "../hook_resolvers" }
windows = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }
mint_lib = { path = "../mint_lib" }
bitflags = "2.4.1"
widestring = "1.0.2"
tokio = { workspace = true, features = ["full"] }
tracing-appender = "0.2.3"
seq-macro = "0.3.5"
tracing-subscriber = "0.3.18"
tracing-tracy = { git = "https://github.com/trumank/rust_tracy_client.git", branch = "static-linking" }
