[package]
name = "hook"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
repak.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
fs-err.workspace = true
tracing.workspace = true
patternsleuth = { workspace = true, features = ["process-internal", "image-pe"] }
retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour"] }
hook_resolvers = { path = "../hook_resolvers" }
windows = { version = "0.61.1", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }
mint_lib = { path = "../mint_lib" }
bitflags = "2.9.0"
widestring = "1.2.0"
tokio = { workspace = true, features = ["full"] }
tracing-appender = "0.2.3"
proxy_dll = { git = "https://github.com/trumank/proxy_dll.git" }
