[package]
name = "mint_lib"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
steamlocate.workspace = true
repak.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
