[package]
name = "mint_lib"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
steamlocate.workspace = true
repak.workspace = true
serde.workspace = true
itertools.workspace = true
fs-err.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
snafu.workspace = true

[build-dependencies]
built = { version = "0.7.3", features = ["semver", "git2"] }
